--- a/plugin.xml
+++ b/plugin.xml
@@ -21,6 +21,10 @@
     <platform name="android">
         <framework src="com.google.android.exoplayer:exoplayer:2.6.1"/>
         <framework src="com.squareup.picasso:picasso:2.5.2"/>
+         <framework
+            custom="true"
+            src="src/android/build-extras.gradle"
+            type="gradleReference"/>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="ExoPlayer">
